# ai-companion

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite-plugin-kokoro.ts  vite.config.ts
.github/workflows/: release.yml
docs/: index.html  script.js  styles.css
public/models/: README.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  ollama.rs  storage.rs
src/components/: AffectionMeter.tsx  AvatarCanvas.tsx  BottomInputBar.tsx  CapturePanel.tsx  ChatInterface.tsx  CustomizationPanel.tsx  FloatingMenu.tsx  MessageBubble.tsx  Onboarding.tsx  Settings.tsx  Stage3D.tsx  StreaksPanel.tsx  SubtitleOverlay.tsx  VRMModel.tsx  VoiceControls.tsx
src/contexts/: SnapshotContext.tsx
src/hooks/: useAffection.ts  useOllama.ts  useSpeechRecognition.ts  useStreak.ts  useTTS.ts  useVRM.ts  useWhisper.ts
src/lib/: audioDevices.ts  canvasRecorder.ts  emotions.ts  kokoro.ts  lipsync.ts  ollama.ts
src/types/: index.ts
